--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>CrawlerSelenium</groupId>
-    <artifactId>TestAutoGetCapcha</artifactId>
+    <groupId>AutoVerifiMailOutlook</groupId>
+    <artifactId>AutoVerifiMailOutlook</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>TestAutoGetCapcha</name>
+    <name>AutoVerifiMailOutlook</name>
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
  
     <dependencies>
